// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/jsonnet-bundler/artifacts performs lock file maintenance 1`] = `
Array [
  Object {
    "file": Object {
      "contents": "Updated jsonnetfile.lock.json",
      "name": "jsonnetfile.lock.json",
    },
  },
]
`;

exports[`manager/jsonnet-bundler/artifacts performs lock file maintenance 2`] = `
Array [
  Object {
    "cmd": "jb update",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/Users/andrein",
        "LANG": "en_US.UTF-8",
        "PATH": "/Users/andrein/bin:/Users/andrein/go/bin:/usr/local/opt/mysql-client/bin:/usr/local/opt/helm@2/bin:/usr/local/opt/gettext/bin:/usr/local/sbin:/usr/local/opt/gnu-tar/libexec/gnubin:/usr/local/opt/gnu-sed/libexec/gnubin:/usr/local/opt/coreutils/libexec/gnubin:/usr/local/Cellar/zplug/2.4.2/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/MacGPG2/bin:/opt/X11/bin:/Applications/Wireshark.app/Contents/MacOS:/Users/andrein/.krew/bin",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/jsonnet-bundler/artifacts returns error when jb update fails 1`] = `
Array [
  Object {
    "artifactError": Object {
      "lockFile": "jsonnetfile.lock.json",
      "stderr": "jb released the magic smoke",
    },
  },
]
`;

exports[`manager/jsonnet-bundler/artifacts returns error when jb update fails 2`] = `
Array [
  Object {
    "cmd": "jb update",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/Users/andrein",
        "LANG": "en_US.UTF-8",
        "PATH": "/Users/andrein/bin:/Users/andrein/go/bin:/usr/local/opt/mysql-client/bin:/usr/local/opt/helm@2/bin:/usr/local/opt/gettext/bin:/usr/local/sbin:/usr/local/opt/gnu-tar/libexec/gnubin:/usr/local/opt/gnu-sed/libexec/gnubin:/usr/local/opt/coreutils/libexec/gnubin:/usr/local/Cellar/zplug/2.4.2/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/MacGPG2/bin:/opt/X11/bin:/Applications/Wireshark.app/Contents/MacOS:/Users/andrein/.krew/bin",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/jsonnet-bundler/artifacts returns null if there are no changes 1`] = `Array []`;

exports[`manager/jsonnet-bundler/artifacts updates the vendor dir when dependencies change 1`] = `
Array [
  Object {
    "file": Object {
      "contents": "Updated jsonnetfile.json",
      "name": "jsonnetfile.json",
    },
  },
  Object {
    "file": Object {
      "contents": "Updated jsonnetfile.lock.json",
      "name": "jsonnetfile.lock.json",
    },
  },
  Object {
    "file": Object {
      "contents": "New foo/main.jsonnet",
      "name": "vendor/foo/main.jsonnet",
    },
  },
  Object {
    "file": Object {
      "contents": "New bar/main.jsonnet",
      "name": "vendor/bar/main.jsonnet",
    },
  },
  Object {
    "file": Object {
      "contents": "vendor/baz/deleted.jsonnet",
      "name": "|delete|",
    },
  },
]
`;

exports[`manager/jsonnet-bundler/artifacts updates the vendor dir when dependencies change 2`] = `
Array [
  Object {
    "cmd": "jb update \\"https://github.com/foo/foo.git\\"",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/Users/andrein",
        "LANG": "en_US.UTF-8",
        "PATH": "/Users/andrein/bin:/Users/andrein/go/bin:/usr/local/opt/mysql-client/bin:/usr/local/opt/helm@2/bin:/usr/local/opt/gettext/bin:/usr/local/sbin:/usr/local/opt/gnu-tar/libexec/gnubin:/usr/local/opt/gnu-sed/libexec/gnubin:/usr/local/opt/coreutils/libexec/gnubin:/usr/local/Cellar/zplug/2.4.2/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/MacGPG2/bin:/opt/X11/bin:/Applications/Wireshark.app/Contents/MacOS:/Users/andrein/.krew/bin",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "jb update \\"ssh://git@github.com/foo/foo.git/bar\\"",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/Users/andrein",
        "LANG": "en_US.UTF-8",
        "PATH": "/Users/andrein/bin:/Users/andrein/go/bin:/usr/local/opt/mysql-client/bin:/usr/local/opt/helm@2/bin:/usr/local/opt/gettext/bin:/usr/local/sbin:/usr/local/opt/gnu-tar/libexec/gnubin:/usr/local/opt/gnu-sed/libexec/gnubin:/usr/local/opt/coreutils/libexec/gnubin:/usr/local/Cellar/zplug/2.4.2/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/MacGPG2/bin:/opt/X11/bin:/Applications/Wireshark.app/Contents/MacOS:/Users/andrein/.krew/bin",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;
